WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268559
[GStreamer][Nexus][Broadcom] Duration queries give wrong values with progressive audio
https://bugs.webkit.org/show_bug.cgi?id=268559
Summary
[GStreamer][Nexus][Broadcom] Duration queries give wrong values with progress...
Vivienne Watermeier
Reported
2024-02-01 10:08:37 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Vivienne Watermeier
Comment 1
2024-02-01 10:16:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23674
EWS
Comment 2
2024-02-12 09:26:05 PST
Committed
274464@main
(41a2e3c52030): <
https://commits.webkit.org/274464@main
> Reviewed commits have been landed. Closing PR #23674 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-12 09:27:31 PST
<
rdar://problem/122807801
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug