Cherry-pick 274464@main (41a2e3c52030). https://bugs.webkit.org/show_bug.cgi?id=268559

[GStreamer] Include MpegAudioParse plugin in Brcm Nexus gstreamer pipeline
    https://bugs.webkit.org/show_bug.cgi?id=268559

    Reviewed by Xabier Rodriguez-Calvar.

    On broadcom/nexus with progressive audio, gst_element_query_duration()
    returns wrong values, which is avoided by forcing mpegaudioparse.

    See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1213

    Original author: suresh-khurdiya-epam <skhurdiya.contractor@libertyglobal.com>

    * Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
    (WebCore::ensureGStreamerInitialized): Override mpegaudioparse rank

    Canonical link: https://commits.webkit.org/274464@main